# sese-db-gui

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  VcpkgTools.cmake  electron-builder.json  package-lock.json  package.json  vcpkg-configuration.json  vcpkg.json  vite.config.js  vue.config.js
addon/: DBExport.cpp  Test.cpp
scripts/: build.js  dev-server.js
scripts/private/: tsc.js
src/: App.vue  background.js  main.js  preload.js  test.js
src/components/: AppHeader.vue  ConnectDialog.vue  PagePanel.vue  SidePanel.vue  TablePage.vue  WelcomePage.vue
src/main/: db.d.ts  main.ts  preload.ts  tsconfig.json
src/main/typings/: db.d.ts
src/renderer/: App.vue  index.html  tsconfig.json
src/renderer/components/: AppHeader.vue  ConnectDialog.vue  PagePanel.vue  SidePanel.vue  TablePage.vue  WelcomePage.vue
src/renderer/typings/: dbexport.d.ts  electron.d.ts
